# api_security_engine

./: Dockerfile  README.md  pyproject.toml
api_security_engine/: main.py
api_security_engine/alert_handlers/: kafka_alert_handler.py  log_alert_handler.py  slack_alert_handler.py
api_security_engine/lib/: alert_handler.py  engine.py  models.py  security_module.py
api_security_engine/lib/tests/: test_alert_handler.py  test_engine.py
api_security_engine/security_modules/: ddos_module.py  enum_module.py  payload_module.py
api_security_engine/security_modules/tests/: test_ddos_module.py  test_enum_module.py  test_payload_module.py
